# Particles-Exercise---C

./: CMakeLists.txt  README.md
src/: example1.c  example2.c  example4.c  example5.c  exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c  exercise6.c  susietrig.c  susietrig.h  susievector.c  susievector.h
